@@ -18,19 +18,19 @@ using namespace std;
 
 @implementation HCIsCloseTo
 
-+ (id) isCloseTo:(double)aValue within:(double)anError
++ (id) isCloseTo:(double)aValue within:(double)aDelta
 {
-    return [[[self alloc] initWithValue:aValue error:anError] autorelease];
+    return [[[self alloc] initWithValue:aValue delta:aDelta] autorelease];
 }
 
 
-- (id) initWithValue:(double)aValue error:(double)anError
+- (id) initWithValue:(double)aValue delta:(double)aDelta
 {
     self = [super init];
     if (self != nil)
     {
         value = aValue;
-        error = anError;
+        delta = aDelta;
     }
     return self;
 }
@@ -38,17 +38,31 @@ using namespace std;
 
 - (BOOL) matches:(id)item
 {
-    if (![item respondsToSelector:@selector(doubleValue)])
+    if (![item isKindOfClass:[NSNumber class]])
         return NO;
     
-    return abs([item doubleValue] - value) <= error;
+    return fabs([item doubleValue] - value) <= delta;
+}
+
+
+- (void) describeMismatchOf:(id)item to:(id<HCDescription>)mismatchDescription
+{
+    if (![item isKindOfClass:[NSNumber class]])
+        [super describeMismatchOf:item to:mismatchDescription];
+    else
+    {
+        double actualDelta = fabs([item doubleValue] - value);
+        [[[mismatchDescription appendDescriptionOf:item]
+                               appendText:@" differed by "]
+                               appendDescriptionOf:[NSNumber numberWithDouble:actualDelta]];
+    }
 }
 
 
 - (void) describeTo:(id<HCDescription>)description
 {
     [[[[description appendText:@"a numeric value within "]
-                    appendDescriptionOf:[NSNumber numberWithDouble:error]]
+                    appendDescriptionOf:[NSNumber numberWithDouble:delta]]
                     appendText:@" of "]
                     appendDescriptionOf:[NSNumber numberWithDouble:value]];
 }
