@@ -19,6 +19,8 @@ Hamcrest information: http://code.google.com/p/hamcrest/
 
 * Improved "hasValue" description.
 
+* Improved "closeTo" mismatch description.
+
 
 == Version 1.2 ==
 
